--- a/agenda/templates/agenda/exibir_agenda.HTML
+++ b/agenda/templates/agenda/exibir_agenda.HTML
@@ -2,5 +2,5 @@
     <h1>Evento: {{evento.nome}} </h1>
     <p>Categoria: {{evento.categoria}}</p>
     {% if evento.local %} <p>Local: {{evento.local}}</p> {% endif%}
-    {% if evento.link %} <p>Local: {{evento.link}}</p> {% endif %}
+    {% if evento.link %} <p>Link: {{evento.link}}</p> {% endif %}
 </html>
