--- a/agenda/templates/agenda/listar_evento.HTML
+++ b/agenda/templates/agenda/listar_evento.HTML
@@ -28,7 +28,11 @@
                     <td>{{evento.nome}}</td>
                     <td>{{evento.Categoria.nome}}</td>
                     <td>{% firstof evento.local evento.link %}</td>
-                    <td>{{evento.data}}</td>
+                    <td>{% if evento.data%}
+                            {{evento.data | date:"d/m/y"}}
+                            {% else %} A definir 
+                        {%endif%}
+                    </td>
                     <td><a href="exibir_evento.html">Ver detalhes</a></td>
                 </tr>
            {% endfor  %}
