paginas referenciadas pelo link

--- a/agenda/templates/agenda/exibir_agenda.HTML
+++ b/agenda/templates/agenda/exibir_agenda.HTML
@@ -12,5 +12,5 @@
     <form action="" method="">
         <input type="submit" value="Participar">
     </form>
-    <p><a href="listar_eventos.html">Ir para listagem de eventos</a></p>
+    <p><a href="{% url 'listar_eventos' %}">Ir para listagem de eventos</a></p>
 </html>
