--- a/agenda/templates/agenda/exibir_agenda.HTML
+++ b/agenda/templates/agenda/exibir_agenda.HTML
@@ -7,10 +7,13 @@
             {% else %} A definir 
      {%endif%}</p>
      {% if evento.link %} <p>Link: {{evento.link}}</p> {% endif %}
-    <p>Quantidade de participantes: 12</p>
-    <br />
-    <form action="" method="">
+    <p>Quantidade de participantes: {{evento.participantes}}</p>
+  
+    <form action="{% url 'participar_evento' %}" method="post">
+        {% csrf_token %} 
+        <input type="hidden" name="evento_id" value="{{ evento.id }}">
         <input type="submit" value="Participar">
     </form>
+
     <p><a href="{% url 'listar_eventos' %}">Ir para listagem de eventos</a></p>
 </html>
